Sat Jan 15 13:44:22 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::VERSION): 0.1.2 -> 0.1.3.
	
	* lib/rss/rss.rb: accept inheritance. [ruby-talk:126104]

Wed Jan 12 00:36:29 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_class_superclass): superclass of singleton class also
	  should be a singleton class.  fixed: [ruby-list:40519]

Tue Jan 11 20:58:52 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (remain_size): use buffered data instead of unreading to avoid
	  inconsistency of text mode.  fixed: [ruby-dev:25446]

Tue Jan 11 09:37:53 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* numeric.c (Init_Numeric): turn off floating point exceptions
	  on bcc32. "1e300".to_f had crashed by overflow.

Mon Jan 10 23:07:45 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_autoload): hide internal data from ruby level.
	  fixed: [ruby-dev:25373]

Mon Jan 10 15:28:51 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb (WEBrick::CGI::Socket#request_line): should
	  escape SCRIPT_NAME and PATH_INFO before being parsed as a URI.

	* lib/webrick/httputils.rb (WEBrick::HTTPUtils#escape_path): add
	  new method to escape URI path component.

	* lib/webrick/ssl.rb (WEBrick::Config::SSL): the default value
	  of :SSLEnable is false.

	* test/webrick/{test_cgi.rb,webrick.cgi}: new file.

	* test/webrick/utils.rb: require "webrick/https.h".

Sun Jan  9 14:12:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_f_select): IO list could be altered.  [ruby-dev:25312]

Sun Jan  9 04:08:40 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* test/webrick/test_server.rb (test_daemon): delete an assertion
	  which has possibility to fail by race condition.

Sun Jan  9 03:22:46 2005  Minero Aoki  <aamine@loveruby.net>

	* test/fileutils/test_fileutils.rb (test_copy_entry): copy_entry
	  copies only file type, not mtime. [ruby-dev:25383]

Sat Jan  8 04:38:47 2005  why the lucky stiff  <why@ruby-lang.org>
