@@ -1,7 +1,12 @@
+Sat Jan 15 14:57:22 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ruby.c (proc_options): ignore trailing CRs at the end of short
+	  options as well as long options.  fixed: [ruby-core:04232]
+
 Sat Jan 15 13:44:22 2005  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rss/rss.rb (RSS::VERSION): 0.1.2 -> 0.1.3.
-	
+
 	* lib/rss/rss.rb: accept inheritance. [ruby-talk:126104]
 
 Wed Jan 12 00:36:29 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
